# 3D_Viewer_2.0

./: .gitignore  .gitmodules  README.md  README_RUS.md  common_settings.h  mainwindow.ui
Tutorials/AntiAliasing/src/: CMakeLists.txt  main.cpp
Tutorials/Blinn-Phong/src/: CMakeLists.txt  main.cpp
Tutorials/Bloom/src/: CMakeLists.txt  Makefile  main.cpp
Tutorials/Cubemap/src/: CMakeLists.txt  main.cpp
Tutorials/Cubemap_reflection/src/: CMakeLists.txt  main.cpp
Tutorials/DeferedShading_1/src/: CMakeLists.txt  main.cpp
Tutorials/DeferedShading_2/src/: CMakeLists.txt  main.cpp
Tutorials/EnviromentLightening/src/: main.cpp
Tutorials/EquirectangularCubemap/src/: main.cpp
Tutorials/GammaCorrection/src/: CMakeLists.txt  main.cpp
Tutorials/GeometryShaderExplodingObjects/src/: CMakeLists.txt  main.cpp
Tutorials/GeometryShaderUsage/src/: CMakeLists.txt  main.cpp
Tutorials/GeometryShaderVisualizeNormals/src/: CMakeLists.txt  main.cpp
Tutorials/HDR/src/: CMakeLists.txt  main.cpp
Tutorials/Instancing-Array/src/: CMakeLists.txt
Tutorials/Instancing-AsteroidField/src/: CMakeLists.txt  main.cpp
Tutorials/NormalMapping/src/: CMakeLists.txt  main.cpp
Tutorials/PBR_1/src/: CMakeLists.txt  main.cpp
Tutorials/PBR_2/src/: CMakeLists.txt  main.cpp
Tutorials/Parallax/src/: CMakeLists.txt  main.cpp
Tutorials/ParallaxOcclusion/src/: CMakeLists.txt  main.cpp
Tutorials/ParallaxToyBox/src/: CMakeLists.txt  main.cpp
Tutorials/PointShadow/src/: CMakeLists.txt  main.cpp
Tutorials/PointShadow_1/src/: CMakeLists.txt  main.cpp
Tutorials/Scene/src/: CMakeLists.txt  main.cpp
Tutorials/ShadowDepthBuffer/src/: CMakeLists.txt  main.cpp
Tutorials/ShadowImproved/src/: CMakeLists.txt  main.cpp
Tutorials/ShadowRandering/src/: CMakeLists.txt  main.cpp
Tutorials/Skelet/src/: CMakeLists.txt  main.cpp
Tutorials/SphereScene/src/: main.cpp
Tutorials/SphereTexture/src/: main.cpp
Tutorials/advancedGLSL/src/: CMakeLists.txt  main.cpp
Tutorials/blending-Discarding_fragments/src/: CMakeLists.txt  main.cpp
Tutorials/blending-semi_transparent/src/: CMakeLists.txt  main.cpp
Tutorials/framebuffer_1/src/: CMakeLists.txt  main.cpp
Tutorials/learnopengl/: camera.h  entity.h
Tutorials/stencil_buffer/src/: CMakeLists.txt  main.cpp
Tutorials/stencil_buffer/src/dependencies/GLAD/: CMakeLists.txt
Tutorials/stencil_buffer/src/dependencies/GLAD/glad/: glad.h
Viewer/src/: CMakeLists.txt  Makefile  main.cc  main.cpp
Viewer/src/Core/: Application.h  Input.cc  Input.h
Viewer/src/Model/: Backend.cc  Backend.h  BackendEvents.cc  Parser.cc  Parser.h  Scene.cc  Scene.h  SceneEvents.cc  ShaderProgram.cc  ShaderProgram.h  TextureStorage.cc  TextureStorage.h  TextureWraper.cc  TextureWraper.h  framebuffer.cc  framebuffer.h  i_framebuffer.h
Viewer/src/OpenGL/: OpenGLDebug.cc  OpenGLDebug.h  OpenGLFramebuffer.cc  OpenGLFramebuffer.h  TextureWraper.cc  TextureWraper.h  framebuffer.cc  framebuffer.h
Viewer/src/common/: Components.cc  Components.h  Hierarchy.cc  Hierarchy.h  Utils.cc  Utils.h
Viewer/src/forms/: MainWindow.ui
Viewer/src/observer/: Observable.h  Observer.h
Viewer/src/scene/: Model.h  Parser.cc  Parser.h  Scene.cc  Scene.h  TextureStorage.cc  TextureStorage.h
Viewer/src/shaders/: 2D_shader_f.c  PBR.fs  PBR.vs  cubemap.fs  cubemap.vs  g_buffer.fs  gizmo.fs  gizmo.vs  irradiance_convolution.fs  light_color_shader.fs  light_color_shader.vs  light_texture_shader.fs  light_texture_shader.vs  normal_mapping.fs  normal_mapping.vs  picking_shader.vs  picking_shader_f.c  point_shadows.fs  point_shadows.vs  point_shadows_depth.fs  point_shadows_depth.gs  point_shadows_depth.vs  quad.fs  quad.vs  shadow_mapping_depth.fs  (+9 more)
delete/: light.h  mesh.h  model.cpp  model.h
misc/: CMakeLists.txt
src/: 3D_Viewer_v1.pro  CMakeLists.txt  Makefile  Makefile_new  Mesh.h  file_parcer.c  file_parcer.h  glwidget.cpp  glwidget.h  indexbuffer.cpp  indexbuffer.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shader.cpp  shader.h  shaders.txt  test.cpp  vertexbuffer.cpp  vertexbuffer.h
src/ECS/components/: Components.h
src/ECS/core/: Controller.h  ECS_Controller.h  Event.h  EventManager.h  component_manager.h  entity_manager.h
src/ECS/events/: TransformChangedEvent.h  WindowResizeEvent.h
src/ECS/systems/: CameraSystem.cc  CameraSystem.h  MousePickingSystem.cc  MousePickingSystem.h  ObjectEditorSystem.cc  ObjectEditorSystem.h  RenderPickedSystem.cc  RenderPickedSystem.h  RenderSystem.cc  RenderSystem.h
src/ViewModels/: CameraViewModel.cc  CameraViewModel.h
src/common/: Utils.cc  Utils.h
src/controller/: controller.h
src/forms/: main_window.ui
src/matrix_algebra/: Makefile  common.c  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
src/model/: Camera.cc  GlWidget.cc  GlWidget.h  ModelParser.cc  ModelParser.cpp  ModelParser.h  TextureStorage.cc  TextureStorage.h  axis.h  backend.cc  backend.cpp  backend.h  camera.h  common_settings.h  controller.h  framebuffer.cc  framebuffer.cpp  framebuffer.h  gl_widget.h  i_framebuffer.h  model_settings.h  signal_handler.h
src/others/shaders/: 2D_shader_f.c  light_color_shader_f.c  light_color_shader_v.c  light_texture_shader_f.c  light_texture_shader_v.c  picking_shader_f.c  simple_color_shader_f.c  simple_color_shader_v.c  simple_texture_shader_f.c  simple_texture_shader_v.c
src/shared/: stb_image.h
src/techniques/: i_technique.h  light_color_technique.cc  light_color_technique.h  light_texture_technique.cc  light_texture_technique.h  picking_technique.cc  picking_technique.h  simple_color_technique.cc  simple_color_technique.h  simple_texture_technique.cc  simple_texture_technique.h  technique_strategy.cc  technique_strategy.h
src/view/: GL_Widget.cc  GL_Widget.h  GlWidget.cc  main_window.cc  main_window.h  main_window.ui  stack_camera.cc  stack_camera.cpp  stack_light.cc  stack_light.cpp  stack_object.cc
tests/: test.h  tests.c
(+160 files in other folders)
